--- a/app/package.json
+++ b/app/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "watch": "nodemon *.*"
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "connect-livereload": "^0.6.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
     "http-errors": "~1.6.3",
+    "livereload": "^0.9.3",
     "mongoose": "^6.3.8",
     "morgan": "~1.9.1"
   }
