--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "livereload": "^0.9.3",
     "mongoose": "^6.3.8",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.18"
   }
 }
